Update email contact information
Changed the email address in the contact section of index.html from 'ablaze_ezalba' to 'clearcleaclown@gmaill.com'. Updated the corresponding copy text and data-copy attribute in the button for consistency.

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- Email -->
     <div class="link-item">
       <img src="./pics/icons/gmail.svg" alt="Email">
-      <a href="mailto:ablaze_ezalba">E-mail</a>
+      <a href="mailto:clearcleaclown@gmaill.com">E-mail</a>
       <div class="copy-container">
-        <code class="copy-text">ablaze_ezalba</code>
-        <button class="copy-button" data-copy="ablaze_ezalba">
+        <code class="copy-text">clearcleaclown@gmaill.com</code>
+        <button class="copy-button" data-copy="clearcleaclown@gmaill.com">
           <span class="copy-icon">📋</span>
         </button>
       </div>
