Update link text in index.html
Changed the link text for the personal website from 'Haruka Hanaoka' to 'My web site' for improved clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
     <div class="link-item">
       <img src="./pics/icons/link-icon.svg" alt="My web site">
-      <a href="https://harukahanaoka.com/" target="_blank">Haruka Hanaoka</a>
+      <a href="https://harukahanaoka.com/" target="_blank">My web site</a>
     </div>
   </div>
 
