Update link for 株式会社 Aida
Changed the hyperlink for 株式会社 Aida from the old URL to the new URL:
- Old URL: https://aida-mocha.vercel.app/
- New URL: https://aida-clearclowns-projects.vercel.app/

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- 株式会社 Aida -->
     <div class="link-item">
       <img src="./pics/icons/link-icon.svg" alt="株式会社 Aida">
-      <a href="https://aida-mocha.vercel.app/" target="_blank">(仮称)株式会社 Aida</a>
+      <a href="https://aida-clearclowns-projects.vercel.app/" target="_blank">(仮称)株式会社 Aida</a>
     </div>
     <div class="link-item">
       <img src="./pics/icons/link-icon.svg" alt="My web site">
